# Myftp

./: .gitignore  CMakeLists.txt  Makefile  myftp  test.sh
mk/: color.mk  def.mk  local_def.mk  rules.mk
server/include/: ftp.h
server/src/: commands.c  logger.c  main.c  response.c  utils.c  utils_port.c
server/src/cmd/: abor.c  default.c  delete.c  list.c  mkdir.c  noop.c  pasv.c  pwd.c  quit.c  retr.c  stor.c  type.c
srv/include/: ftp.h
srv/src/: main.c  response.c  socket.c  utils.c  utils_port.c
srv/src/cmd/: cdup.c  cwd.c  list.c  pass.c  port.c  retr.c  rmd.c  size.c  stor.c  user.c
